--- a/src/components/DocumentView/DocumentView.scss
+++ b/src/components/DocumentView/DocumentView.scss
@@ -143,6 +143,8 @@
 
   .tiptap {
     outline: none;
+    overflow-wrap: anywhere;
+    word-break: break-word;
   }
 
   .tiptap p {
