--- a/src/components/Viewer/Viewer.scss
+++ b/src/components/Viewer/Viewer.scss
@@ -6,6 +6,7 @@
   border-right: 1px solid rgba(v.$white, 0.06);
   min-height: 0;
   overflow-y: auto;
+  overflow-x: hidden;
   background: v.$gradient-bg, v.$black;
 }
 
